--- a/web/pgadmin/tools/sqleditor/static/scss/_sqleditor.scss
+++ b/web/pgadmin/tools/sqleditor/static/scss/_sqleditor.scss
@@ -18,6 +18,15 @@
   z-index: 0;
 }
 
+#editor-panel {
+  z-index: 0;
+  position: absolute;
+  top: $sql-editor-panel-top;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 #editor-panel .CodeMirror-activeline-background {
   background: $color-primary-light;
 }
